Revision history for Perl extension Net::DNS::Nameserver::Trivial.

0.1		2012-10-13 13:51 UTC
	- First release.