@@ -1,11 +1,11 @@
-# nameservers ----------------------------------------------------------
-nameservers 							= srv.example.com
-
 # slaves ---------------------------------------------------------------
 slaves									= 127.0.0.1, 10.1.0.1
 
 # serial ---------------------------------------------------------------
 #serial									= ""
+
+[NS]
+example.com							=	srv.example.com
 
 [SOA]
 example.com							=	srv.example.com
